# cython-pocketfft

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  build_tests.py  requirements-rtfd.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
ci/: build_coveralls_config.py  build_manywheels.sh  fix_pypirc.py
ci/templates/: build-matrix.yml  build-steps.yml  compile-steps.yml  coverage-test.yml  gather-artifacts.yml  job-variable-steps.yml  stage-vars.yml
cypocketfft/: __init__.py  fft.pxd  fft.pyx  plancache.pxd  plancache.pyx  test_plancache.pyx  testfft.pyx  wrapper.pxd  wrapper.pyx
doc/source/: conf.py  fft.rst  index.rst  wrapper.rst
doc/source/reference/: fft.rst  index.rst  plancache.rst  types.rst  wrapper.rst
src/cypocketfft/: fft.pxd  fft.pyx  plancache.pxd  plancache.pyx  wrapper.pxd  wrapper.pyx
src/cypocketfft/_pocketfft_lib/: pocketfft.c  pocketfft_numpy.c
tests/: _test_plancache.pyx  _testfft.pyx  conftest.py  setup.py  test_fft.py  test_plancache.py
