[bdist_wheel]
universal = False

[metadata]
name = cython-pocketfft
version = 0.0.1
author = Matthew Reid
author_email = matt@nomadic-recording.com
url = https://github.com/nocarryr/cython-pocketfft
description = Cython wrapper for PocketFFT
long_description = file: README.md
long_description_content_type = text/markdown

#license_file = LICENSE
platforms = any


[options]
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude = tests

[options.package_data]
cypocketfft = *.pxd

[tool:pytest]
testpaths = tests
