[bdist_wheel]
universal = False

[metadata]
name = cython-pocketfft
version = 0.0.1
author = Matthew Reid
author_email = matt@nomadic-recording.com
url = https://github.com/nocarryr/cython-pocketfft
description = Cython wrapper for PocketFFT
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    License :: OSI Approved :: MIT License


[options]
zip_safe = False
setup_requires =
    Cython>=0.29.6
include_package_data = True
package_dir=
    =src
packages = find:

[options.packages.find]
where = src
exclude = tests

[options.package_data]
cypocketfft =
    *.pxd
    *.pyx
    *.c
cypocketfft._pocketfft_lib =
    *.h
    *.c

[tool:pytest]
testpaths = tests
