[bdist_wheel]
universal = False

[metadata]
name = cython-pocketfft
version = 0.0.12
author = Matthew Reid
author_email = matt@nomadic-recording.com
project_urls =
    Source Code = https://github.com/nocarryr/cython-pocketfft
    Documentation = https://cython-pocketfft.readthedocs.io/en/latest/
description = Cython wrapper for PocketFFT
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
zip_safe = False
setup_requires =
    Cython>=0.29.6
include_package_data = True
package_dir=
    =src
packages = find:

[options.packages.find]
where = src
exclude = tests

[options.package_data]
cypocketfft =
    *.pxd
    *.pyx
    *.c
    *.cpp
cypocketfft._pocketfft_lib =
    *.h
    *.c

[tool:pytest]
testpaths = tests
